<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background4"
    tools:context="com.example.mwami.myapplication.StudentLogin">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo2"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:text="@string/choose" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7" />

    <EditText
        android:id="@+id/regNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/reg_number"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regNum"
        android:layout_alignStart="@+id/regNum"
        android:layout_below="@+id/regNum"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pw"
        android:layout_alignStart="@+id/pw"
        android:layout_below="@+id/pw"
        android:layout_marginTop="18dp"
        android:background="@color/background5"
        android:text="@string/login_btn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pw"
        android:layout_alignRight="@+id/pw"
        android:layout_alignTop="@+id/button"
        android:background="@color/background6"
        android:text="@string/reg_btn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="29dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_span="3"
            android:gravity="center"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textStyle="bold" />
    </TableRow>

    <TextView
        android:id="@+id/forgotPW"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/pass_forget_btn"
        android:textAlignment="center"
        android:textColor="@color/button_teacher"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>
