<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background4"
    tools:context="com.example.mwami.myapplication.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/e_logo" />

    <Spinner
        android:id="@+id/university"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/university"
        android:text="@string/choose"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/regNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pw"
        android:layout_alignStart="@+id/pw"
        android:layout_below="@+id/university"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/reg_number"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/logBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pw"
        android:layout_alignStart="@+id/pw"
        android:layout_below="@+id/pw"
        android:layout_marginTop="11dp"
        android:background="@color/background5"
        android:text="@string/login_btn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logBtn"
        android:layout_alignBottom="@+id/logBtn"
        android:layout_alignEnd="@+id/pw"
        android:layout_alignRight="@+id/pw"
        android:background="@color/background6"
        android:text="@string/reg_btn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forgotPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/button_teacher"
        android:text="@string/pass_forget_btn"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="29dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_span="3"
            android:gravity="center"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>
</RelativeLayout>
