<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background4"
    android:theme="@style/AppTheme"
    tools:context="com.example.mwami.myapplication.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/e_logo" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/connect"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/learn"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/grow"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

    <Button
        android:id="@+id/student_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/student_btn"
        android:text="@string/stud_button"
        android:textColor="#ffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/teacher_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/student_btn"
        android:layout_alignRight="@+id/student_btn"
        android:layout_below="@+id/student_btn"
        android:layout_marginTop="35dp"
        android:background="@drawable/radius_corner"
        android:text="@string/teach_button"
        android:textColor="#ffff"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="29dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_span="3"
            android:gravity="center"
            android:text="@string/copyright"
            android:textStyle="bold" />
    </TableRow>
</RelativeLayout>
